# CocoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main  main.cpp
headers/: shaderClass.h
resources/: default.frag
src/: Camera.cpp  EBO.cpp  Main.cpp  Mesh.cpp  Meshy.cpp  Model.cpp  Modely.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp
src/headerfiles/: EBO.h  VBO.h
src/headers/: Camera.h  EBO.h  Mesh.h  Meshy.h  Model.h  Modely.h  Shader.h  Texture.h  VAO.h  VBO.h
src/resources/models/bunny/: baseColor.png:Zone.Identifier  metallicRoughness.png:Zone.Identifier  scene.bin:Zone.Identifier  scene.gltf
src/shaders/: fragment_core.glsl  vertex_core.glsl
